# cs142-mp2

./: Cargo.toml  README.md  dp_plot.py  greedy_largest_value.csv  greedy_plot.py  greedy_smallest_weight.csv  greedy_value_weight_ratio.csv  knapsack_bottom_up.rs  knapsackbottom.txt  knapsacktop.txt  main.rs  plot.py
graph/: plot.py
greedy_knapsack/: Cargo.toml
greedy_knapsack/src/: main.rs
results/: bottom_up.csv  greedy.txt  greedy_largest_value.csv  greedy_smallest_weight.csv  greedy_value_weight_ratio.csv  knapsacktop.txt  top_down.csv
src/: dynamic_knapsack.rs  greedy_driver.rs  greedy_knapsack.rs  knapsack_bottom_up.rs  knapsack_bottomup_driver.rs  knapsack_topdown_driver.rs  main.rs
