[package]
name = "cs142-mp2"
version = "0.1.0"
edition = "2021"

[dependencies]
rand="0.8"
stacker = "0.1.14"
csv = "1.1"

[[bin]]
name = "greedy"
path = "src/greedy_driver.rs"

[[bin]]
name = "dpbottom"
path = "src/knapsack_bottomup_driver.rs"

[[bin]]
name = "dptop"
path = "src/knapsack_topdown_driver.rs"